Fix z-index of Ribbon

--- a/view/src/main/resources/static/sass/partials/components/_c-Ribbon.scss
+++ b/view/src/main/resources/static/sass/partials/components/_c-Ribbon.scss
@@ -15,5 +15,7 @@
   -ms-transform:rotate(-45deg);
   -webkit-transform:rotate(-45deg);
   transform:rotate(-45deg);
-  z-index: 1000;
+  // higher than navbar and header bar
+  // lower than modal backdrop
+  z-index: 1075;
 }
